--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div v-show="pageStatus === 'final'" class="page final">
-            <div class="final-title">(*^▽^*){{userName}},我们结婚吧(*^▽^*)<br>答应我，即可获得终极幸运大礼包！</div>
+            <div class="final-title">(*^▽^*){{userName}},我们结婚吧(*^▽^*)<br><div style="font-size: 14px;">答应我，即可获得终极幸运大礼包！</div></div>
             <canvas id="pinkboard"></canvas>
         </div>
     </div>
